# centilliondataback

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
centilliondataback/: __init__.py  app.py  process.ipynb
