[tool.poetry]
name = "centilliondataback"
version = "0.1.0"
description = ""
authors = ["BesfortBunjaku <bessffort@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
fastapi-admin = "^1.0.4"
pymongo = "^4.5.0"
fastapi-amis-admin = {extras = ["sqlmodel"], version = "^0.6.7"}
fastapi-scheduler = "^0.0.13"
pandas = "2.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
